fix(webviews): remove z-index from prompt searchbox

--- a/vscode/webviews/components/promptList/PromptList.module.css
+++ b/vscode/webviews/components/promptList/PromptList.module.css
@@ -7,7 +7,6 @@
     &--input-container {
         top: 0;
         position: sticky;
-        z-index: 1;
     }
 
     &--input {
